welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:49: error: unclosed comment
/*def hunt(){
^SlugSnail:49: error: unclosed comment
/*def hunt(){
^SlugSnail:49: error: unclosed comment
/*def hunt(){
^SlugSnail:2: error: Missing closing brace `}' assumed here
def hunt(c:Color) {
^SlugSnail:2: error: expected class or object definition
def hunt(c:Color) {
^SlugSnail:27: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugSnail:49: error: unclosed comment
/*def hunt(){
^